crates/carta/tests/snapshots/golden_writer__opml__common__header-attr.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
<outline text="Titled">
</outline>
