crates/carta/tests/snapshots/golden_writer__opml__common__header-unnumbered.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
<outline text="Hidden">
</outline>
