crates/carta/tests/snapshots/golden_writer__opml__common__headers.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
<outline text="One">
  <outline text="Two">
    <outline text="Six">
    </outline>
  </outline>
</outline>
